--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "express-validator": "^6.14.2"
   },
   "name": "app-master",
   "version": "1.0.0",
@@ -10,7 +11,8 @@
     "supertest": "^6.2.4"
   },
   "scripts": {
-    "test": "jest --detectOpenHandles"
+    "test": "jest --coverage",
+    "start": "node src/server.js"
   },
   "keywords": [],
   "author": "",
